# ComfyUI-TransparencyBackgroundRemover

./: .gitignore  CLAUDE.md  FLOYO_INTEGRATION_GUIDE.md  GEMINI.md  README.md  RemoveBackgroundAndResizeNode.py  __init__.py  background_remover.py  grabcut_nodes.py  grabcut_remover.py  install.bat  install.py  install.sh  nodes.py  pyproject.toml  requirements.txt  scaling.py  schemas.py  test_grabcut.py  test_node_import.py  test_node_smoke.py  test_optimized_edge_detection.py  test_power_of_8_scaling.py  test_power_of_8_standalone.py  test_scaling.py  test_standalone.py
.github/workflows/: comfy-ci.yml  publish.yml
examples/: qwen_grabcut_photograph_v1.json  qwen_pixel_art_grabcut_v1.json  workflow.json
src/: validation.py
tests/: conftest.py  test_grabcut_nodes.py  test_grabcut_processor.py  test_nodes.py  test_validation.py
