[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-transparency-background-remover"
version = "1.0.0"
description = "ComfyUI node for removing backgrounds and creating transparency"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "Pillow",
    "opencv-python",
]

[project.urls]
Homepage = "https://github.com/yourusername/ComfyUI-TransparencyBackgroundRemover"
Repository = "https://github.com/yourusername/ComfyUI-TransparencyBackgroundRemover"
Issues = "https://github.com/yourusername/ComfyUI-TransparencyBackgroundRemover/issues"