[project]
name = "ComfyUI-TransparencyBackgroundRemover"
version = "1.0.3"
description = "Automatic background removal and transparency generation for ComfyUI"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/Limbicnation/ComfyUI-TransparencyBackgroundRemover"
Documentation = "https://github.com/Limbicnation/ComfyUI-TransparencyBackgroundRemover/wiki"
"Bug Tracker" = "https://github.com/Limbicnation/ComfyUI-TransparencyBackgroundRemover/issues"

[tool.comfy]
PublisherId = "limbicnation"
DisplayName = "Transparency Background Remover"
Icon = "https://raw.githubusercontent.com/Limbicnation/ComfyUI-TransparencyBackgroundRemover/main/icon.png"