[project]
name = "ComfyUI-TransparencyBackgroundRemover"
version = "1.1.3"
description = "Automatic background removal and transparency generation for ComfyUI"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/Limbicnation/ComfyUI-TransparencyBackgroundRemover"
Documentation = "https://github.com/Limbicnation/ComfyUI-TransparencyBackgroundRemover/wiki"
"Bug Tracker" = "https://github.com/Limbicnation/ComfyUI-TransparencyBackgroundRemover/issues"

[tool.comfy]
PublisherId = "limbicnation"
DisplayName = "Transparency Background Remover"
Icon = "https://raw.githubusercontent.com/Limbicnation/ComfyUI-TransparencyBackgroundRemover/main/icon.png"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["cuda: tests requiring CUDA GPU"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"